--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>OI</h1>
-</body>
-</html>
+<html lang="pt-br">
+    <head>
+          <!-- Importação do normalize css para arrumar bugs -->
+          <link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
+          <!-- Importação do sistema de grid -->
+          <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
+          <!-- Importação do nossa folha de estilo -->
+          <link rel="stylesheet" type="text/css" href="./resources/css/style.css"
+          <!-- Importação da fonte Lato -->
+          <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&amp;subset=latin-ext" rel="stylesheet">
+        <title>Barbearia Senac</title>
+    </head>
+    <body>
+        <div class="row">
+           <p>texto teste</p>
+        </div>
+    </body>
+ </html>
