--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
         <title>Barbearia Senac</title>
     </head>
     <body>
-        <div class="row">
-           <p>texto teste</p>
-        </div>
+        <header>
+            <nav>
+                <div class="row">
+                    <img src="resources/img/logo.jpg" alt="logo bla" class="logo">
+                    <ul class="main-nav">
+                        <li><a href="#">Marcar Horario</a></li>
+                        <li><a href="#">Mais informações</a></li>
+                        <li><a href="#">naosei</a></li>
+                        <li><a href="#">naosei1</a></li>
+                    </ul>
+                </div>
+            <nav>
+            <div class="hero-text-box">
+                <h1>Barbearia SENAC <br> Marque seu horário</h1>
+                <a class="btn btn-full" href="#">Marque agora</a>
+                <a class="btn btn-ghost" href="#">Mais informações</a>
+            </div>
+        </header>
     </body>
  </html>
