--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div class="row">
-                    <img src="resources/img/logo.jpg" alt="logo bla" class="logo">
+                    <img src="resources/img/logosemfundo.png" alt="logo bla" class="logo">
                     <ul class="main-nav">
                         <li><a href="#">Marcar Horario</a></li>
                         <li><a href="#">Mais informações</a></li>
@@ -30,5 +30,40 @@
                 <a class="btn btn-ghost" href="#">Mais informações</a>
             </div>
         </header>
+        <section class="section-feactures">
+            <div class="row">
+                <h2>Estou sem ideia no momento &mdash; do que por.</h2>
+                <p class="long-copy">
+                    Nós da saúde no prato queremos prover a você uma experiência incrivelmente deliciosa e saudável. Pois entendemos que nem todo mundo tem tempo suficiente ou interesse em cozinhar, mas não é por isso que as pessoas devem deixar de se alimentar bem.
+                </p>
+            </div>
+            <div class="row">
+                <div class="col span-1-of-4 box">
+                    <ion-icon name="infinite"></ion-icon>
+                    <h3>Aberto 365 dias</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non porttitor. 
+                      Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <ion-icon name="stopwatch"></ion-icon>
+                    <h3>Entre em contato</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non porttitor. 
+                      Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <ion-icon name="nutrition"></ion-icon>
+                    <h3>100% higienico</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non porttitor. 
+                      Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+                </div>
+                <div class="col span-1-of-4 box">
+                    <ion-icon name="card"></ion-icon>
+                    <h3>Aceitamos cartões</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non porttitor. 
+                      Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+                </div>
+            </div>
+        </section>
     </body>
  </html>
+ <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
