--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                     <ul class="main-nav">
                         <li><a href="#">Marcar Horario</a></li>
                         <li><a href="#">Mais informações</a></li>
-                        <li><a href="#">naosei</a></li>
-                        <li><a href="#">naosei1</a></li>
+                        <li><a href="#">Contatos</a></li>
+                        <li><a href="#">Sobre nós</a></li>
                     </ul>
                 </div>
             <nav>
@@ -63,6 +63,52 @@
                       Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
                 </div>
             </div>
+        </section>
+        <section>
+            <ul class="images-showcase">
+                <li>
+                    <figure class="photo">
+                        <img src="resources/img/photo1.jpg" alt="texto do documento" title="texto do documento" />
+                    </figure>
+                </li>
+                <li>
+                    <figure class="photo">
+                        <img src="resources/img/photo2.jpg" alt="texto do documento" title="texto do documento" />
+                    </figure>
+                </li>
+                <li>
+                    <figure class="photo">
+                        <img src="resources/img/photo3.jpg" alt="texto do documento" title="texto do documento" />
+                    </figure>
+                </li>
+                <li>
+                    <figure class="photo">
+                        <img src="resources/img/photo4.jpeg" alt="texto do documento" title="texto do documento" />
+                    </figure>
+                </li>
+            </ul>
+            <ul class="images-showcase">
+                <li>
+                    <figure class="photo">
+                        <img src="resources/img/photo5.jpg" alt="texto do documento" title="texto do documento" />
+                    </figure>
+                </li>
+                <li>
+                    <figure class="photo">
+                        <img src="resources/img/photo6.jpg" alt="texto do documento" title="texto do documento" />
+                    </figure>
+                </li>
+                <li>
+                    <figure class="photo">
+                        <img src="resources/img/photo7.jpg" alt="texto do documento" title="texto do documento" />
+                    </figure>
+                </li>
+                <li>
+                    <figure class="photo">
+                        <img src="resources/img/photo8.jpg" alt="texto do documento" title="texto do documento" />
+                    </figure>
+                </li>
+            </ul>
         </section>
     </body>
  </html>
