--- a/index.html
+++ b/index.html
@@ -110,6 +110,46 @@
                 </li>
             </ul>
         </section>
+        <section class="section-steps">
+            <!--Container com o título da seção -->
+            <div class="row">
+                <!-- Conteúdo da coluna da esquerda -->
+                <div class="col span-1-of-2 steps-box">
+                    <!-- Adiciona a imagem da tela de um smarphone com nosso aplicativo aberto -->
+                    <img src="resources/img/app-screen.png" alt="Seu pedido pelo iPhone" class="app-screen">
+                </div>
+              
+                <!-- Conteúdo da coluna da direita -->
+                <div class="col span-1-of-2 steps-box">
+                    <!-- Container com o primeiro passo -->
+                    <div class="step">
+                        <div>1</div>
+                        <p>Selecione qual plano melhor se encaixa no seu bolso!</p>
+                    </div>
+                    <!-- Container com o segundo passo -->
+                    <div class="step">
+                        <div>2</div>
+                        <p>Escolha uma refeição deliciosa e super saúdavel!</p>
+                    </div>
+                    <!-- Container com o terceiro passo -->
+                    <div class="step">
+                        <div>3</div>
+                        <p>Aguarde apenas 15 minutos e receba a refeição escolhida na porta da sua casa!</p>
+                         <!-- Botões para os aplicativos -->
+                        <a href="#" class="btn-app"><img src="resources/img/ios.png" alt="Botão App Store"></a>
+                        <a href="#" class="btn-app"><img src="resources/img/android.png" alt="Botão Play Store"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-photos">
+            <ul class="images-showcase clearfix">
+              <!-- muitos códigos aqui -->
+            </ul>
+            <ul class="images-showcase clearfix">
+              <!-- muitos códigos aqui -->
+            </ul>
+    </section>
     </body>
  </html>
  <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
