--- a/index.html
+++ b/index.html
@@ -144,16 +144,50 @@
                     <a href="#" class="btn-app"><img src="resources/img/android.png" alt="Botão Play Store"</a>
                 </div>
             </div>
-            <section class="section-photos">
-                <ul class="images-showcase cleafix">
-                <!--Muitos cds aqui-->
-                </ul>
-                <ul class="images-showcase cleafix">
-                <!--Muitos cds aqui-->
-                </ul>
-            </section>
-
+            <!--BOTAR AQUELE BGL AQUI DNV DPS-->
         <!-- Fechando steps-->
+        </section>
+        <!--Abrindo a secao testemunhos-->
+        <section class="section-testimonials">
+            <div class="row">
+                <!--Title fist div-->
+                <h2>Melhorando a beleza das pessoas</h2>
+            </div>
+            <div class="row">
+                <!-- Aqui irá o conteúdo da segunda div, organizado em 3 colunas -->
+                <div class="col span-1-of-3">
+                    <!--Primeira coluna -->
+                    <blockquote>
+                        Saúde no prato é incrível! Eu sou uma pessoa super ocupada, com pouco tempo para cuidar da 
+                      minha alimentação, mas tudo mudou com a equipe da saúde no prato que assumiu essa função.
+                        <cite>
+                            <img src="resources/img/3x4.jpeg"/>Alberto Saltonetto
+                        </cite>
+                    </blockquote>
+                </div>
+                <div class="col span-1-of-3">
+                    <!--Segunda coluna -->
+                    <blockquote>
+                        Comida saúdavel rapidinho na porta da sua casa! A melhor opção para mim e para vc... 
+                      principalmente para mim que odeio cozinhar e que já perdi três casas após incendia-las 
+                      tentando cozinhar.
+                        <cite>
+                            <img src="resources/img/3x4.jpeg"/>Joicelaine Carneiro
+                        </cite>
+                    </blockquote>
+                </div>
+                <div class="col span-1-of-3">
+                    <!--Terceira coluna -->
+                    <blockquote>
+                        Eu estava procurando por uma alimentação saudável e que coubesse no meu bolso e encontrei... 
+                      Saúde no Prato, melhor custo-benefício ever! Muito mais que alvace, eles tem rúcula e 
+                      repolho também!
+                        <cite>
+                            <img src="resources/img/3x4.jpeg"/>Pedro Antunes               
+                        </cite>
+                    </blockquote>
+                </div>
+            </div>                
         </section>
     </body>
  </html>
