--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <nav>
                 <div class="row">
-                    <img src="resources/img/logosemfundo.png" alt="logo bla" class="logo">
+                    <img src="resources/img/aaaaaaaaaaaaaaaaaaaaaaaaaa.png" alt="logo bla" class="logo">
                     <ul class="main-nav">
                         <li><a href="#">Marcar Horario</a></li>
                         <li><a href="#">Mais informações</a></li>
@@ -32,35 +32,31 @@
         </header>
         <section class="section-feactures">
             <div class="row">
-                <h2>Estou sem ideia no momento &mdash; do que por.</h2>
+                <h2>Não perca tempo &mdash; Marque seu horário.</h2>
                 <p class="long-copy">
-                    Nós da saúde no prato queremos prover a você uma experiência incrivelmente deliciosa e saudável. Pois entendemos que nem todo mundo tem tempo suficiente ou interesse em cozinhar, mas não é por isso que as pessoas devem deixar de se alimentar bem.
-                </p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the</p>
             </div>
             <div class="row">
                 <div class="col span-1-of-4 box">
                     <ion-icon name="infinite"></ion-icon>
-                    <h3>Aberto 365 dias</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non porttitor. 
-                      Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+                    <h3>Aberto de segunda a sabado</h3>
+                    <!--<p>Estamos abertos de segunda a sadado ate as 20:00 da noite.</p>-->
                 </div>
                 <div class="col span-1-of-4 box">
-                    <ion-icon name="stopwatch"></ion-icon>
+                    <ion-icon name="call"></ion-icon>
                     <h3>Entre em contato</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non porttitor. 
-                      Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+                    <p></p>
                 </div>
                 <div class="col span-1-of-4 box">
                     <ion-icon name="nutrition"></ion-icon>
                     <h3>100% higienico</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non porttitor. 
-                      Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+                    <p></p>
                 </div>
                 <div class="col span-1-of-4 box">
                     <ion-icon name="card"></ion-icon>
                     <h3>Aceitamos cartões</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque volutpat malesuada massa non porttitor. 
-                      Vivamus tristique laoreet lorem, at maximus ante ultrices vel.</p>
+                    <p></p>
                 </div>
             </div>
         </section>
@@ -115,7 +111,7 @@
 
             <div class="row">
 
-                <h2>Esperando o que? &mdash; Bastam 3 passos </h2>
+                <h2>Esperando o que? &mdash; Baixe nosso aplicativo! </h2>
             </div>
 
 
@@ -133,15 +129,15 @@
                     </div>
                     <div class="step">
                         <div>2</div>
-                        <p>Escolha uma refeição deliciosa e super saúdavel!</p>
+                        <p>Escolha o melhor corte para você.</p>
                     </div>
                     <div class="step">
                         <div>3</div>
-                        <p>Aguarde apenas 15 minutos e receba a refeição escolhida na sua porta de casa!</p>
+                        <p>Marque seu horário com a gente, aceitamos cartões.</p>
                     </div>
 
-                    <a href="#" class="btn-app"><img src="resources/img/ios.png" alt="Botão Apple Store"></a>
-                    <a href="#" class="btn-app"><img src="resources/img/android.png" alt="Botão Play Store"</a>
+                    <a href="#" class="btn-app"><img src="resources/img/appler novo.jpg" alt="Botão Apple Store"></a>
+                    <a href="#" class="btn-app"><img src="resources/img/android novo.png" alt="Botão Play Store"</a>
                 </div>
             </div>
             <!--BOTAR AQUELE BGL AQUI DNV DPS-->
@@ -189,6 +185,30 @@
                 </div>
             </div>                
         </section>
+        <footer>
+            <div class="row">
+                <div class="col span-1-of-2">
+                    <ul class="footer-nav">
+                        <li><a href="#">Sobre Nós</a></li>
+                        <li><a href="#">Marcar Horario</a></li>
+                        <li><a href="#">Contatos</a></li>
+                        <li><a href="#">App iOS</a></li>
+                        <li><a href="#">App Android</a></li>
+                    </ul>
+                </div>
+                <div class="col span-1-of-2">
+                    <ul class="social-links">
+                        <li><a href="#"><ion-icon class="logo-instagram" name="logo-instagram"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon class="logo-facebook" name="logo-facebook"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon class="logo-googleplus" name="logo-googleplus"></ion-icon></a></li>
+                        <li><a href="#"><ion-icon class="logo-twitter" name="logo-twitter"></ion-icon></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <p>Copyright &copy; 2020 - Barbearia [Nome]. Todos os direitos reservados.</p>
+            </div>
+        </footer>
     </body>
  </html>
  <script src="https://unpkg.com/ionicons@4.2.2/dist/ionicons.js"></script>
