--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
           <!-- Importação do sistema de grid -->
           <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
           <!-- Importação do nossa folha de estilo -->
-          <link rel="stylesheet" type="text/css" href="./resources/css/style.css"
+          <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+          <link rel="manifest" href="manifest.json">
+          <script src="swRegister.js"></script>
+          
           <!-- Importação da fonte Lato -->
           <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&amp;subset=latin-ext" rel="stylesheet">
         <title>Barbearia Senac</title>
